# MayaToolsExample

./: Fbx导出工具  README.md  addsuffix.py  count_elements.py  create_ctrl_grp.py  如何获取根节点的列表  简单说明.md
docs/: deploy_maya_svn_worker.md
maya_cpp_plugin_template_202603/: README.md
maya_cpp_plugin_template_202603/docs/: developer_guide.md  manager_guide.md
maya_cpp_plugin_template_202603/project_rules/: naming_rules.md
maya_cpp_plugin_template_202603/template/: .gitignore  CMakeLists.txt  CMakePresets.json  DAILY_WORKFLOW.md  DEPLOYMENT_WINDOWS11.md  build_debug.bat  deploy_release_to_windows11_user.bat  deploy_to_windows11_user.bat
maya_cpp_plugin_template_202603/template/cmake/: MayaCommon.cmake  MayaVersionSwitch.cmake
maya_cpp_plugin_template_202603/template/docs/: ADDING_NEW_FEATURES_WORKFLOW.md  MULTI_MAYA_VERSION_TEMPLATE.md  NODE_TEMPLATE_EXAMPLE.md  PLUGIN_EXPOSURE_RULES.md  RELEASE_AND_DEPLOY_GUIDE.md
maya_cpp_plugin_template_202603/template/module_template/: MayaCppPluginTemplate.mod  README.md  install_module_to_user.bat  package_release_to_module.bat
maya_cpp_plugin_template_202603/template/plugins/hello_world_mll/: CMakeLists.txt
maya_cpp_plugin_template_202603/template/plugins/hello_world_mll/include/: add_value_node.h  echo_text_command.h  hello_command.h
maya_cpp_plugin_template_202603/template/plugins/hello_world_mll/src/: add_value_node.cpp  echo_text_command.cpp  hello_command.cpp  plugin_features.cpp  plugin_main.cpp
maya_cpp_plugin_template_202603/template/plugins/scene_tools_mll/: CMakeLists.txt
maya_cpp_plugin_template_202603/template/plugins/scene_tools_mll/include/: clamp_value_node.h  list_selection_command.h  maya_version_command.h  plugin_features.h
maya_cpp_plugin_template_202603/template/plugins/scene_tools_mll/src/: clamp_value_node.cpp  list_selection_command.cpp  maya_version_command.cpp  plugin_features.cpp  plugin_main.cpp
maya_cpp_plugin_template_202603/template/plugins/utility_tools_mll/: CMakeLists.txt
maya_cpp_plugin_template_202603/template/plugins/utility_tools_mll/include/: build_info_command.h  negate_value_node.h
maya_cpp_plugin_template_202603/template/plugins/utility_tools_mll/src/: build_info_command.cpp  negate_value_node.cpp  plugin_features.cpp  plugin_main.cpp
maya_cpp_plugin_template_202603/template/scripts/: load_hello_plugin.py  load_scene_tools_plugin.py  load_utility_tools_plugin.py
maya_cpp_plugin_template_202603/template/shared/include/: maya_plugin_manifest.h  maya_shared_log.h
maya_svn_worker_minimal/: __init__.py  backend_demo.py  backend_pysvnlite.py  bridge.py  example_maya_usage.py  worker.py
重命名工具/: README.md  renaming_scene.ma  说明.txt
